QMainWindow:::restoreDockWidget(): Restore to correct screen.

Use the placeholder top level geometry to determine the
screen.

Task-number: QTBUG-40155
Change-Id: If56b239200e9daf754b0963574367cf7891c5f40
Reviewed-by: Giuseppe D'Angelo <giuseppe.dangelo@kdab.com>